5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1771_1189.log
== TEST (2019-05-23 01:20:34) 
-- CODE:
from numpy import *
pal = array(eval(input("digite a frase: ")))
copy = ""
i = 0

while(i<len(pal)):
	if(pal[i] == " ")
		copy = copy + ""
	else:
		copy = copy + pal[i]
	i = i + 1
print(copy)
-- ERROR:
File "XXXX", line 7
    if(pal[i] == " ")
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 01:20:58) 
-- CODE:
from numpy import *
pal = array(eval(input("digite a frase: ")))
copy = ""
i = 0

while(i<len(pal)):
	if(str(pal[i]) == " ")
		copy = copy + ""
	else:
		copy = copy + pal[i]
	i = i + 1
print(copy)
-- ERROR:
File "XXXX", line 7
    if(str(pal[i]) == " ")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 01:21:19) 
-- CODE:
from numpy import *
pal = array(eval(input("digite a frase: ")))
copy = ""
i = 0

while(i<len(pal)):
	if(pal[i] == " "):
		copy = copy + ""
	else:
		copy = copy + str(pal[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 01:21:47) 
-- CODE:
from numpy import *
pal = input("digite a frase: ")
copy = ""
i = 0

while(i<len(pal)):
	if(pal[i] == " "):
		copy = copy + ""
	else:
		copy = copy + str(pal[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 01:31:29) 
-- CODE:
from numpy import *
pal = input("digite a frase: ")
copy = ""
i = 0

while(i<len(pal)):
	if(pal[i] == " "):
		copy = copy + ""
	else:
		copy = copy + str(pal[i])
	i = i + 1
print(copy.upper())
valor = 0
i2 = 0
while(i2<len(copy)):
	if(copy[i2] == copy[-1*(i2+1)]:
		valor = valor + 1
	else:
		valor = valor + 0
	i2 = i2 + 1
if(valor == len(copy)):
	print("1")
else:
		print("0")
-- ERROR:
File "XXXX", line 16
    if(copy[i2] == copy[-1*(i2+1)]:
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 01:31:32) 
-- CODE:
from numpy import *
pal = input("digite a frase: ")
copy = ""
i = 0

while(i<len(pal)):
	if(pal[i] == " "):
		copy = copy + ""
	else:
		copy = copy + str(pal[i])
	i = i + 1
print(copy.upper())
valor = 0
i2 = 0
while(i2<len(copy)):
	if(copy[i2] == copy[-1*(i2+1)]:
		valor = valor + 1
	else:
		valor = valor + 0
	i2 = i2 + 1
if(valor == len(copy)):
	print("1")
else:
	print("0")
-- ERROR:
File "XXXX", line 16
    if(copy[i2] == copy[-1*(i2+1)]:
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 01:31:40) 
-- CODE:
from numpy import *
pal = input("digite a frase: ")
copy = ""
i = 0

while(i<len(pal)):
	if(pal[i] == " "):
		copy = copy + ""
	else:
		copy = copy + str(pal[i])
	i = i + 1
print(copy.upper())
valor = 0
i2 = 0
while(i2<len(copy)):
	if(copy[i2] == copy[-1*(i2+1)]):
		valor = valor + 1
	else:
		valor = valor + 0
	i2 = i2 + 1
if(valor == len(copy)):
	print("1")
else:
	print("0")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 01:31:53) 
-- CODE:
from numpy import *
pal = input("digite a frase: ")
copy = ""
i = 0

while(i<len(pal)):
	if(pal[i] == " "):
		copy = copy + ""
	else:
		copy = copy + str(pal[i])
	i = i + 1
print(copy.upper())
valor = 0
i2 = 0
while(i2<len(copy)):
	if(copy[i2] == copy[-1*(i2+1)]):
		valor = valor + 1
	else:
		valor = valor + 0
	i2 = i2 + 1
if(valor == len(copy)):
	print("1")
else:
	print("0")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 01:32:09) 
-- CODE:
from numpy import *
pal = input("digite a frase: ")
copy = ""
i = 0

while(i<len(pal)):
	if(pal[i] == " "):
		copy = copy + ""
	else:
		copy = copy + str(pal[i])
	i = i + 1
print(copy.upper())
valor = 0
i2 = 0
while(i2<len(copy)):
	if(copy[i2] == copy[-1*(i2+1)]):
		valor = valor + 1
	else:
		valor = valor + 0
	i2 = i2 + 1
if(valor == len(copy)):
	print("1")
else:
	print("0")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 01:32:14) 
-- CODE:
from numpy import *
pal = input("digite a frase: ")
copy = ""
i = 0

while(i<len(pal)):
	if(pal[i] == " "):
		copy = copy + ""
	else:
		copy = copy + str(pal[i])
	i = i + 1
print(copy.upper())
valor = 0
i2 = 0
while(i2<len(copy)):
	if(copy[i2] == copy[-1*(i2+1)]):
		valor = valor + 1
	else:
		valor = valor + 0
	i2 = i2 + 1
if(valor == len(copy)):
	print("1")
else:
	print("0")
-- EXECUTION TIME:
0.392127
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 01:32:56) 
-- CODE:
from numpy import *
pal = input("digite a frase: ")
copy = ""
i = 0

while(i<len(pal)):
	if(pal[i] == " "):
		copy = copy + ""
	else:
		copy = copy + str(pal[i])
	i = i + 1
print(copy.upper())
valor = 0
i2 = 0
while(i2<len(copy)):
	if(copy[i2] == copy[-1*(i2+1)]):
		valor = valor + 1
	else:
		valor = valor + 0
	i2 = i2 + 1
if(valor == len(copy)):
	print("1")
else:
	print("0")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 01:34:09) 
-- CODE:
from numpy import *
pal = input("digite a frase: ")
copy = ""
i = 0

while(i<len(pal)):
	if(pal[i] == " "):
		copy = copy + ""
	else:
		copy = copy + str(pal[i])
	i = i + 1
print(copy.upper())
valor = 0
i2 = 0
while(i2<len(copy)):
	if(copy[i2] == copy[-1*(i2+1)]):
		valor = valor + 1
	else:
		valor = valor + 0
	i2 = i2 + 1
if(valor == len(copy)):
	print("1")
else:
	print("0")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
